# cosmic-bing-wallpaper

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  RETROSPECTIVE.md  THEMATIC-ANALYSIS.md  bing-wallpaper.sh  install-appimage.sh  justfile
cosmic-bing-wallpaper/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  FLATPAK.md  THIRD_PARTY_LICENSES.md  install.sh  io.github.cosmic-bing-wallpaper.yml  io.github.reality2-roycdavies.cosmic-bing-wallpaper.yml  io.github.reality2_roycdavies.cosmic-bing-wallpaper.yml  justfile
cosmic-bing-wallpaper/appimage/: build-appimage.sh
cosmic-bing-wallpaper/resources/: io.github.cosmic-bing-wallpaper.appdata.xml  io.github.cosmic-bing-wallpaper.desktop  io.github.cosmic-bing-wallpaper.metainfo.xml  io.github.reality2-roycdavies.cosmic-bing-wallpaper.desktop  io.github.reality2-roycdavies.cosmic-bing-wallpaper.metainfo.xml  io.github.reality2_roycdavies.cosmic-bing-wallpaper.desktop  io.github.reality2_roycdavies.cosmic-bing-wallpaper.metainfo.xml  org.cosmicbing.Wallpaper1.service
cosmic-bing-wallpaper/src/: app.rs  applet.rs  bing.rs  config.rs  daemon.rs  dbus_client.rs  main.rs  service.rs  settings.rs  timer.rs  tray.rs
cosmic-bing-wallpaper/systemd/: cosmic-bing-wallpaper.service  install-timer.sh
docs/: AI-ASSISTED-DEVELOPMENT.md  DEVELOPMENT.md  FLATPAK-JOURNEY.md  README.md  RETROSPECTIVE.md  THEMATIC-ANALYSIS.md
docs/transcripts/: CONVERSATION-PART1-CREATION.md  CONVERSATION-PART2-REFINEMENT.md  CONVERSATION-PART3-CODE-REVIEW.md  CONVERSATION-PART4-ARCHITECTURE.md  CONVERSATION-PART6-FLATPAK.md  CONVERSATION-PART7-BUGFIXES.md  README.md  convert_to_markdown.py
flathub/: PR_DESCRIPTION.md  cargo-sources.json  io.github.reality2_roycdavies.cosmic-bing-wallpaper.yml
i18n/en/: cosmic_bing_wallpaper.ftl
resources/: io.github.reality2_roycdavies.cosmic-bing-wallpaper.metainfo.xml
src/: applet.rs  bing.rs  config.rs  dbus_client.rs  main.rs  service.rs  settings.rs  timer.rs
systemd/: cosmic-bing-wallpaper.timer  uninstall-timer.sh
transcripts/: CONVERSATION-PART1-CREATION.md  CONVERSATION-PART2-REFINEMENT.md  README.md  conversation-part2-refinement.jsonl  convert_to_markdown.py
