[package]
name = "cosmic-bing-wallpaper"
version = "0.1.3"
edition = "2021"
authors = ["Your Name"]
license = "MPL-2.0"
description = "Bing Daily Wallpaper manager for COSMIC desktop"

[dependencies]
# COSMIC GUI toolkit
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "a11y",
    "tokio",
    "winit",
    "wgpu",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for fetching Bing API
reqwest = { version = "0.12", features = ["json"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internationalization
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

# File operations
dirs = "6"

# Date/time handling
chrono = "0.4"

# Open URLs/files
open = "5"

# System tray (StatusNotifierItem protocol)
ksni = "0.2"

[profile.release]
lto = true
codegen-units = 1
