[package]
name = "cosmic-bing-wallpaper"
version = "0.3.4"
edition = "2021"
authors = ["Roy C. Davies"]
license = "MIT"
description = "Bing Daily Wallpaper manager for COSMIC desktop"

[dependencies]
# COSMIC GUI toolkit
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "a11y",
    "tokio",
    "winit",
    "wgpu",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for fetching Bing API
reqwest = { version = "0.12", features = ["json"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internationalization
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

# File operations
dirs = "6"

# Date/time handling
chrono = "0.4"

# System tray (StatusNotifierItem protocol)
ksni = "0.3"
image = "0.24"

# D-Bus IPC for daemon/client communication
zbus = "4"

# File system watching for theme changes
notify = "6"

[profile.release]
lto = true
codegen-units = 1
