[package]
name = "cosmic-bing-wallpaper"
version = "0.4.0"
edition = "2021"
authors = ["Roy C. Davies"]
license = "MIT"
description = "Bing Daily Wallpaper applet for COSMIC desktop"

[dependencies]
# COSMIC GUI toolkit (applet mode for panel integration)
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "applet",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for fetching Bing API
reqwest = { version = "0.12", features = ["json"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File operations
dirs = "6"

# Date/time handling
chrono = "0.4"

# D-Bus IPC for applet/settings communication
zbus = "4"

[profile.release]
lto = true
codegen-units = 1
